--- a/IssueTracker.DataAccess/IssueTracker.DataAccess.fsproj
+++ b/IssueTracker.DataAccess/IssueTracker.DataAccess.fsproj
@@ -51,7 +51,9 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Connections.fs" />
     <Compile Include="IssueLayer.fs" />
+    <Compile Include="UserLayer.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
