--- a/IssueTracker.Interop/IssueTracker.Interop.csproj
+++ b/IssueTracker.Interop/IssueTracker.Interop.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,8 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UserRepository.cs" />
+    <Compile Include="Wrappers\UserDatabaseAccess.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IssueTracker.Core\IssueTracker.Core.fsproj">
+      <Project>{b720d610-ea36-4b2a-b456-9bcc938dba40}</Project>
+      <Name>IssueTracker.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IssueTracker.DataAccess\IssueTracker.DataAccess.fsproj">
+      <Project>{86401421-5103-4f6a-8fc1-3f6a931c682e}</Project>
+      <Name>IssueTracker.DataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
