Added IssueDataAccess with corrosponding controller. Created rough UI for polling.

--- a/IssueTracker.DataAccess/IssueTracker.DataAccess.fsproj
+++ b/IssueTracker.DataAccess/IssueTracker.DataAccess.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Connections.fs" />
     <Compile Include="UserLayer.fs" />
+    <Compile Include="IssueLayer.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
